# Platformer

./: .gitignore  CMakeLists.txt
data/: BasicHandwriting.bmfc  BasicHandwriting.fnt  world.ldtk
src/: bin2c.c  draw.c  draw.h  fnt2c.rb  font.h  font_metrics.h  keyboard.c  keyboard.h  ldtk.c  ldtk.h  ldtk2c.rb  ldtk_forward.h  ldtk_world.c.erb  ldtk_world_defs.h.erb  ldtk_world_enum.h.erb  main.c  object.c  object.h  object_header.h  object_pool.c  object_pool.h  resources.x  screen.c  screen.h  texture.c  texture.h  type.c  type.h  types.x  util.c  util.h  window.c  window.h
src/objects/: menu_item.c  menu_item.h  text.c  text.h  tile_layer.c  tile_layer.h
src/screens/: menu.c  menu.h
